add controller membership